name:                fun-blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/itepifanio/programacao-funcional/tree/master/fun-blog
license:             MIT
license-file:        LICENSE
author:              Ítalo Epifânio
maintainer:          italoepifaniols@gmail.com
copyright:           2018 Ítalo Epifânio
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fun-blog
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules: Bootstrap, Controller, Models
  default-extensions: OverloadedStrings
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       scotty,
                       text,
                       sqlite-simple,
                       aeson,
                       wai-middleware-static
