Name:                fun-blog
Version:             0.1
Synopsis:            scotty examples
Homepage:            https://github.com/scotty-web/scotty
Bug-reports:         https://github.com/scotty-web/scotty/issues
License:             BSD3
License-file:        LICENSE
Author:              Andrew Farmer <xichekolas@gmail.com>
Maintainer:          Andrew Farmer <xichekolas@gmail.com>
Copyright:           (c) 2012-Present Andrew Farmer
Category:            Web
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:         Example programs using @scotty@
tested-with:         GHC == 7.6.3
                   , GHC == 7.8.4
                   , GHC == 7.10.3
                   , GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.3

executable fun-blog
  main-is:             Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      .
  build-depends:       base >= 4.6 && < 5,
                       blaze-builder,
                       blaze-html,
                       bytestring,
                       cookie,
                       scotty,
                       text
  GHC-options:         -Wall -threaded

source-repository head
  type:     git
  location: git://github.com/scotty-web/scotty.git

